[gd_scene load_steps=54 format=2]

[ext_resource path="res://assets/mapas/fase3.png" type="Texture" id=1]
[ext_resource path="res://assets/Ui/fundo alto esquerda vermelho.jpeg" type="Texture" id=2]
[ext_resource path="res://assets/characters/Character_023.png" type="Texture" id=3]
[ext_resource path="res://assets/Ui/back_transparent.png" type="Texture" id=4]
[ext_resource path="res://assets/fontes/VT323-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/Ui/chat_decision.png" type="Texture" id=6]
[ext_resource path="res://players/fase_2/fase2_rafa_protagonista.gd" type="Script" id=7]
[ext_resource path="res://assets/fontes/Stacked pixel.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/characters/rafaProtagonista.png" type="Texture" id=9]
[ext_resource path="res://scripts/fase_3/fase3_claudia.gd" type="Script" id=10]
[ext_resource path="res://scripts/fase_2/Dialog1.gd" type="Script" id=11]
[ext_resource path="res://assets/aúdios/botões no pause.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/buttons/fase4botp.png" type="Texture" id=13]
[ext_resource path="res://assets/buttons/voltarfasebot.png" type="Texture" id=14]
[ext_resource path="res://assets/buttons/fase4bot.png" type="Texture" id=15]
[ext_resource path="res://assets/buttons/voltardecisbot.png" type="Texture" id=16]
[ext_resource path="res://assets/buttons/voltarfasebotp.png" type="Texture" id=17]
[ext_resource path="res://assets/Ui/telaconteudoserro.png" type="Texture" id=18]
[ext_resource path="res://assets/buttons/voltardecisbotp.png" type="Texture" id=19]
[ext_resource path="res://assets/Ui/errou_conteúdo.png" type="Texture" id=20]
[ext_resource path="res://assets/Ui/telaconteudosacerto.png" type="Texture" id=21]
[ext_resource path="res://scripts/fase_3/fase_3.gd" type="Script" id=22]
[ext_resource path="res://assets/Ui/setacadeira.png" type="Texture" id=23]
[ext_resource path="res://assets/aúdios/Music_Game_-_5.mp3" type="AudioStream" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 73, 41 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 69, 18 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 233, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 321.5, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 92.5, 9.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 41 )

[sub_resource type="Animation" id=10]
resource_name = "andandobaixo"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=11]
resource_name = "andandocima"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=12]
resource_name = "andandoladod"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=13]
resource_name = "andandoladoe"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=14]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=15]
resource_name = "idlecima"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 49 ]
}

[sub_resource type="Animation" id=30]
resource_name = "idleladoe"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=16]
resource_name = "parada"

[sub_resource type="CapsuleShape2D" id=17]
radius = 11.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=18]
height = 6.0

[sub_resource type="Animation" id=19]
resource_name = "andandobaixo"

[sub_resource type="Animation" id=20]
resource_name = "andandocima"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=21]
resource_name = "andandoladod"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=22]
resource_name = "andandoladoe"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=23]
resource_name = "idle"
length = 3.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.8, 1.7, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 17, 1, 33 ]
}

[sub_resource type="DynamicFont" id=8]
size = 18
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=24]
resource_name = "movendo"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 5 ), Vector2( 4, 3 ), Vector2( 4, 5 ), Vector2( 4, 3 ) ]
}

[sub_resource type="DynamicFont" id=25]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=26]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=28]
resource_name = "cimabaixo"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 440, 160 ), Vector2( 440, 155 ) ]
}

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 27.3523, 36.3045 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 22 )

[node name="cenario" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="fundo" type="Sprite" parent="cenario"]
position = Vector2( 317.76, 179 )
scale = Vector2( 0.629375, 0.603333 )
texture = ExtResource( 2 )

[node name="cenafase3" type="Sprite" parent="cenario"]
position = Vector2( 320, 168 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="cenario/cenafase3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cenario/cenafase3/StaticBody2D"]
position = Vector2( -32, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="cenario/cenafase3/StaticBody2D"]
position = Vector2( -249, 15 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="cenario/cenafase3/StaticBody2D"]
position = Vector2( -221, 96 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="cenario/cenafase3/StaticBody2D"]
position = Vector2( -89, -43 )
shape = SubResource( 4 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="cenario/cenafase3/StaticBody2D"]
position = Vector2( -1.5, 176 )
shape = SubResource( 5 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="cenario/cenafase3/StaticBody2D"]
position = Vector2( 227.5, 49.5 )
shape = SubResource( 6 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="cenario/cenafase3/StaticBody2D"]
position = Vector2( 148, 15 )
shape = SubResource( 7 )

[node name="personagens" type="Node2D" parent="."]

[node name="fase1_rafa_protagonista" type="KinematicBody2D" parent="personagens"]
position = Vector2( 23, 171 )
script = ExtResource( 7 )

[node name="sprite" type="Sprite" parent="personagens/fase1_rafa_protagonista"]
position = Vector2( -48, 127 )
scale = Vector2( 2.24983, 2.24983 )
texture = ExtResource( 9 )
hframes = 16
vframes = 4

[node name="anim" type="AnimationPlayer" parent="personagens/fase1_rafa_protagonista"]
anims/andandobaixo = SubResource( 10 )
anims/andandocima = SubResource( 11 )
anims/andandoladod = SubResource( 12 )
anims/andandoladoe = SubResource( 13 )
anims/idle = SubResource( 14 )
anims/idlecima = SubResource( 15 )
anims/idleladoe = SubResource( 30 )
anims/parada = SubResource( 16 )

[node name="collision" type="CollisionShape2D" parent="personagens/fase1_rafa_protagonista"]
position = Vector2( -49, 131 )
shape = SubResource( 17 )

[node name="fase3_claudia" type="KinematicBody2D" parent="personagens"]
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="personagens/fase3_claudia"]
position = Vector2( 391, 166 )
scale = Vector2( 2.54167, 2.54167 )
texture = ExtResource( 3 )
hframes = 16
vframes = 4
frame = 1

[node name="Collision" type="CollisionShape2D" parent="personagens/fase3_claudia"]
position = Vector2( 392, 177 )
shape = SubResource( 18 )

[node name="anim" type="AnimationPlayer" parent="personagens/fase3_claudia"]
anims/andandobaixo = SubResource( 19 )
anims/andandocima = SubResource( 20 )
anims/andandoladod = SubResource( 21 )
anims/andandoladoe = SubResource( 22 )
anims/idle = SubResource( 23 )

[node name="quest_decision" type="Control" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0

[node name="blush" type="TextureRect" parent="quest_decision"]
margin_left = -8.0
margin_top = -8.0
margin_right = 648.0
margin_bottom = 376.0
texture = ExtResource( 4 )
expand = true

[node name="sprite" type="Sprite" parent="quest_decision"]
position = Vector2( 88.0001, 40 )
scale = Vector2( 6.45816, 6.45816 )
texture = ExtResource( 3 )
hframes = 16
vframes = 4

[node name="chat" type="TextureRect" parent="quest_decision"]
margin_left = 22.0
margin_top = 16.0
margin_right = 634.0
margin_bottom = 364.0
texture = ExtResource( 6 )
expand = true

[node name="quiz" type="Control" parent="quest_decision"]
margin_right = 40.0
margin_bottom = 40.0

[node name="pergunta" type="Label" parent="quest_decision/quiz"]
margin_left = 104.0
margin_top = 110.0
margin_right = 553.0
margin_bottom = 221.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "A Cláudia pediu para você ficar após sua carga horária, para que você possa contribuir para um relatório importante, porém você tem um compromisso. Qual a melhor gestão de conflito aqui?
"
autowrap = true

[node name="quest" type="Control" parent="quest_decision/quiz"]
margin_left = 104.0
margin_top = 179.0
margin_right = 144.0
margin_bottom = 219.0

[node name="wrong" type="Button" parent="quest_decision/quiz/quest"]
margin_right = 435.0
margin_bottom = 41.0
align = 2

[node name="pergunta" type="Label" parent="quest_decision/quiz/quest"]
margin_left = 4.0
margin_top = -2.0
margin_right = 431.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
text = "Você aceita, pois é uma ordem da sua liderança pronto."

[node name="quest2" type="Control" parent="quest_decision/quiz"]
margin_left = 104.0
margin_top = 231.0
margin_right = 144.0
margin_bottom = 271.0

[node name="wrong" type="Button" parent="quest_decision/quiz/quest2"]
margin_right = 435.0
margin_bottom = 41.0
align = 2

[node name="pergunta" type="Label" parent="quest_decision/quiz/quest2"]
margin_left = 4.0
margin_top = -2.0
margin_right = 431.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
text = "Você explica para Cláudia que tem um compromisso importante, pede desculpas e sai no horário normal. "
autowrap = true

[node name="right" type="Control" parent="quest_decision/quiz"]
margin_left = 104.0
margin_top = 283.0
margin_right = 144.0
margin_bottom = 323.0

[node name="right" type="Button" parent="quest_decision/quiz/right"]
margin_right = 435.0
margin_bottom = 41.0
align = 2

[node name="pergunta" type="Label" parent="quest_decision/quiz/right"]
margin_left = 4.0
margin_top = -2.0
margin_right = 431.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
text = "Você explica importáncia do compromisso, mas que pode entrar mais cedo no dia anterior."
autowrap = true

[node name="missão" type="Label" parent="."]
margin_left = 31.0
margin_top = 64.0
margin_right = 494.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "aproveite o descanso e Compre uma bebida na maquina."

[node name="dialogo_1" type="Control" parent="."]
visible = false
margin_left = 52.0
margin_top = -30.0
margin_right = 92.0
margin_bottom = 10.0

[node name="Dialog1" type="ColorRect" parent="dialogo_1"]
margin_left = 440.0
margin_top = 35.0
margin_right = 571.0
margin_bottom = 185.0
color = Color( 0.223529, 0.25098, 0.27451, 1 )
script = ExtResource( 11 )
dialogPath = "res://dialogos/dialog6.tres"

[node name="Name" type="RichTextLabel" parent="dialogo_1/Dialog1"]
margin_left = 4.0
margin_top = 4.0
margin_right = 88.0
margin_bottom = 33.0
custom_colors/default_color = Color( 1, 1, 1, 1 )

[node name="Text" type="RichTextLabel" parent="dialogo_1/Dialog1"]
margin_left = 7.0
margin_top = 31.0
margin_right = 125.0
margin_bottom = 137.0
custom_colors/default_color = Color( 1, 1, 1, 1 )

[node name="Indicator" type="Polygon2D" parent="dialogo_1/Dialog1"]
position = Vector2( -20, 4 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 145, 133, 135, 133, 140, 140, 141.703, 137.615 )

[node name="poligono" type="AnimationPlayer" parent="dialogo_1/Dialog1/Indicator"]
autoplay = "movendo"
anims/movendo = SubResource( 24 )

[node name="Timer" type="Timer" parent="dialogo_1/Dialog1"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="dialogo_1/Dialog1"]
stream = ExtResource( 12 )

[node name="wrong_decision" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="FundoJogo21" type="Sprite" parent="wrong_decision"]
position = Vector2( 320, 175 )
scale = Vector2( 1.02969, 1.00688 )
texture = ExtResource( 18 )

[node name="img_wrong_decision" type="TextureRect" parent="wrong_decision"]
margin_left = 34.0
margin_top = 112.0
margin_right = 636.0
margin_bottom = 454.0
texture = ExtResource( 20 )
expand = true

[node name="LinkButton" type="LinkButton" parent="wrong_decision"]
margin_left = 54.0
margin_top = 186.0
margin_right = 486.0
margin_bottom = 220.0
focus_mode = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Clique aqui para acessar o conteúdo."
underline = 1

[node name="back_phase" type="TextureButton" parent="wrong_decision"]
margin_left = 67.0
margin_top = 254.0
margin_right = 262.0
margin_bottom = 297.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 17 )
expand = true

[node name="back_decision" type="TextureButton" parent="wrong_decision"]
margin_left = 390.0
margin_top = 254.0
margin_right = 581.0
margin_bottom = 294.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 19 )
expand = true

[node name="right_decision" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="FundoJogo21" type="Sprite" parent="right_decision"]
position = Vector2( 319, 180 )
scale = Vector2( 1.01564, 1.03297 )
texture = ExtResource( 21 )

[node name="video_conteudo" type="VideoPlayer" parent="right_decision"]
margin_left = 56.0
margin_top = 136.0
margin_right = 560.0
margin_bottom = 304.0
autoplay = true

[node name="LinkButton2" type="LinkButton" parent="right_decision"]
margin_left = 68.0
margin_top = 185.0
margin_right = 500.0
margin_bottom = 219.0
focus_mode = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 26 )
text = "Clique aqui para acessar o conteúdo."
underline = 1

[node name="next_phase" type="TextureButton" parent="right_decision"]
margin_left = 382.0
margin_top = 248.0
margin_right = 459.0
margin_bottom = 289.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 13 )
expand = true

[node name="back_phase" type="TextureButton" parent="right_decision"]
margin_left = 112.0
margin_top = 251.0
margin_right = 307.0
margin_bottom = 294.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 17 )
expand = true

[node name="icone_mesa" type="Sprite" parent="."]
position = Vector2( 440, 159.167 )
rotation = 1.5708
scale = Vector2( 0.162022, 0.165269 )
texture = ExtResource( 23 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="icone_mesa"]
autoplay = "cimabaixo"
anims/cimabaixo = SubResource( 28 )

[node name="Area2D" type="Area2D" parent="icone_mesa"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="icone_mesa/Area2D"]
position = Vector2( -25.7167, 0 )
shape = SubResource( 29 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )
autoplay = true

[node name="botsaudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
autoplay = true

[connection signal="pressed" from="quest_decision/quiz/quest/wrong" to="." method="_on_wrong_pressed"]
[connection signal="pressed" from="quest_decision/quiz/quest2/wrong" to="." method="_on_wrong_pressed"]
[connection signal="pressed" from="quest_decision/quiz/right/right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="wrong_decision/back_phase" to="." method="_on_back_phase_pressed"]
[connection signal="pressed" from="wrong_decision/back_decision" to="." method="_on_back_decision_pressed"]
[connection signal="pressed" from="right_decision/next_phase" to="." method="_on_next_phase_pressed"]
[connection signal="pressed" from="right_decision/back_phase" to="." method="_on_back_phase_pressed"]
[connection signal="body_entered" from="icone_mesa/Area2D" to="." method="_on_Area2D_body_entered"]
